--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -7,6 +7,7 @@
     background-color: #f5f5f5;
     padding: 20px;
     overflow-y: auto;
+    margin-top: 3.5%;
   }
   
   .sidebar h3 {
@@ -99,3 +100,23 @@ hr {
   border: 1px solid #ccc;
   margin: 20px 0;
 }
+
+.choose-file-button {
+  background-color: #1a5417;
+  color: #ffffff;
+  padding: 8px 16px;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.choose-file-button:hover {
+  background-color: #0f3a0c;
+}
+
+.placeholderimage{
+  border-radius: 50%;
+}
+
+
+
+
