--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,63 +1,62 @@
-/* styles.css */
-.app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+/* sidebar.css */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 300px;
+  padding: 20px;
   background-color: #f5f5f5;
+  z-index: 1;
+  overflow-y: auto;
+  border-right: 1px solid #ddd;
 }
 
-h1 {
-  font-size: 36px;
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-.form {
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 30px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 400px;
-}
-
-.input-container {
+.user-info {
   margin-bottom: 20px;
 }
 
-label {
-  display: block;
-  font-size: 18px;
+.user-info h1 {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.user-info p {
   margin-bottom: 10px;
 }
 
-input[type="text"],
-input[type="password"] {
-  width: 100%;
-  padding: 12px;
-  font-size: 16px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+.profile-picture {
+  position: relative;
+  width: 80px; /* Adjust the width as per your preference */
+  height: 80px; /* Adjust the height as per your preference */
+  margin-bottom: 10px;
 }
 
-button[type="submit"] {
-  background-color: #4caf50;
+.profile-picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile-picture a {
+  display: block;
+}
+
+.edit-profile-button {
+  width: 100%;
+  background-color: #007bff;
   color: #fff;
   border: none;
-  padding: 12px 24px;
-  font-size: 18px;
-  border-radius: 4px;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
-.error-message {
-  color: red;
-  margin-top: 20px;
-  text-align: center;
-  font-size: 16px;
+hr {
+  border: none;
+  border-top: 1px solid #ddd;
+  margin: 10px 0;
 }
-
-
-
-
