--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,7 +1,9 @@
 /* sidebar.css */
+/* sidebar.css */
+/* sidebar.css */
 .sidebar {
   position: fixed;
-  top: 0;
+  top: calc(50px + 10px); /* Adjust the top value as per your preference */
   left: 0;
   bottom: 0;
   width: 300px;
@@ -9,8 +11,10 @@
   background-color: #f5f5f5;
   z-index: 1;
   overflow-y: auto;
-  border-right: 1px solid #ddd;
+  border-right: none !important; /* Remove the right-side border */
 }
+
+
 
 .user-info {
   margin-bottom: 20px;
@@ -27,8 +31,9 @@
 
 .profile-picture {
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 80px; /* Adjust the width as per your preference */
+  height: 80px; /* Adjust the height as per your preference */
+  margin: 0 auto; /* Center horizontally */
   margin-bottom: 10px;
 }
 
@@ -37,20 +42,12 @@
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
+  display: block;
 }
 
-.choose-file-button {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  text-align: center;
-  background-color: #f5f5f5;
-  padding: 5px 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  cursor: pointer;
+
+.profile-picture a {
+  display: block;
 }
 
 .edit-profile-button {
